重构应用界面，提升用户体验和视觉效果
- 更新任务列表视觉样式，使用更清晰的符号和颜色
- 优化输入框组件，添加边框和颜色
- 实现任务完成状态的删除线效果
- 改进层级缩进显示
- 添加层级操作错误消息的国际化支持
- 修复文件保存逻辑，确保层级调整后正确保存
- 使用 Markdown 风格复选框 ([ ] 和 [x])

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -8,6 +8,8 @@
   "messageToggled": "已切换: \"{task}\"",
   "messageDeleted": "已删除: \"{task}\"",
   "messageEdited": "已修改: \"{task}\"",
-  "controlsList": "(a)添加 | (e)编辑 | (space)切换完成 | (d)删除 | (j/k)选择 | (shift+j/k)移动 | (q)退出",
+  "messageCannotPromote": "无法提升层级：找不到父任务",
+  "messageCannotDemote": "第一个任务不能降低层级",
+  "controlsList": "(a)添加 | (e)编辑 | (space)切换完成 | (d)删除 | (j/k)选择 | (shift+j/k)移动 | (h/l)缩进 | (q)退出",
   "controlsAdd": "输入任务内容后按 Enter 保存"
 }
