重构任务树逻辑，完善父子任务关系处理
- 创建任务树工具类 TaskTreeUtils，提供统一的任务树操作方法
- 重构任务移动逻辑，移动任务时同时移动其所有子任务
- 重构层级调整逻辑，调整父任务层级时同步调整所有子任务
- 重构删除任务逻辑，删除任务时同时删除其所有子任务
- 重构父子任务完成状态同步逻辑，确保状态一致性
- 添加任务移动和层级调整的错误处理和验证
- 更新国际化文件，添加新的消息翻译

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,6 +10,9 @@
   "messageEdited": "Edited: \"{task}\"",
   "messageCannotPromote": "Cannot promote task: no parent task found",
   "messageCannotDemote": "Cannot demote first task",
+  "messageCannotMove": "Cannot move task to this position",
+  "messageTaskPromoted": "Task promoted",
+  "messageTaskDemoted": "Task demoted",
   "controlsList": "(a)dd | (e)dit | (space) Toggle Done | (d)elete | (j/k)select | (shift+j/k)move | (h/l)indent | (q)uit",
   "controlsAdd": "Type task and press Enter to save"
 }
